testsuite/escript/classes/fail-class-as-identifier.err
fail-class-as-identifier.src:4:8: error: Unknown identifier 'A'.