testsuite/escript/classes/fail-class-as-identifier.src
class A()
endclass

print( A );
